--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -123,6 +123,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.58</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-jexl3</artifactId>
+            <version>3.1</version>
+        </dependency>
 
 
     </dependencies>
